fixed header format

--- a/index.html
+++ b/index.html
@@ -1,86 +1,86 @@
+<!-- Personal website-->
+
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Alanna Pasco</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Alanna Pasco</title>
+
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/github-light.css">
+  <meta name="viewport" content="width=device-width">
+  <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
+</head>
 
 
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Welcome</h1>
+      <p><img src="website-photo.JPG" alt="Personal Photo"></p>
 
-  <div id="London" class="tabcontent">
-    <h1>London</h1>
-    <p>London is the capital city of England.</p>
+      <div id="tabs">
+        <a class="active" href="#home">Home</a> |
+        <a class="view" href="#contact">About</a> |
+        <a class="view" href="#about">Work</a> |
+        <a class="view" href="#about">Photos</a>
+      </div>
+
+      <br>
+      <b>Contact</b><br>
+      pasco.a@northeastern.edu<br>
+      <a href="https://github.ccs.neu.edu/alannapasco">GitHub Enterprise Profile</a><br>
+      <a href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a>
+
+
+    </header>
+
+    <section>
+      <h3>
+        <a id="introduction" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
+
+      <p>I like to call myself a lover of languages—both natural and programming. As a child I wrote up my own alphabet and taught it to my friends so we could write secret letters to one another. In high school I spent hours after class with my
+        English teacher to ask about the origins of strange words from our Shakespeare reading. I didn’t care about Shakespeare, though: I was completely fascinated at how his knowledge of ancient Greek and Latin opened doors to different
+        perspectives and interpretations of the same old story.</p>
+
+      <p>My fascination with language as a lens through which we enhance our worldview unsurprisingly led me to study linguistics and international affairs during my undergraduate career. I have formally studied Spanish and Arabic and taken part in
+        language immersion programs around the world. My international experience connected me to varied professional positions where I married my love of language learning with humanitarian work.</p>
+
+      <p>After transferring to Northeastern University in 2016, I was working part-time at a local bakery when I had an idea to improve the quality of our refrigerated products by tracking shelf life in a structured manner. Waste reduction and
+        increased sales were side effects of my idea as it led the team to place more informed orders from our supplier. When one of my favorite regular customers, a software engineer, once asked what I was working on, I showed him my color-coded
+        data visualization of the display shelf. His reaction surprised me: his eyes lit up, he grabbed a pen and napkin, and started explaining to me how my little chart was a computer program. And just like that, I was inspired to take my first
+        computer science course.</p>
+
+      <p>I instantly found a crossover between language learning and programming. Both pursuits engage similar aspects of the intellect: creativity, organization, sequential processing, and appreciating the abstract. Over the years I have gotten
+        Java, Python, Javascript, HTML, CSS, Git/Github under my belt. My specialties include quickly learning new skills and programming languages, systematic problem solving, integrating design patterns and principles, and an intrinsic motivation
+        to learn. I have become obsessed with using software to solve practical problems while I continue to use my linguistic abilities to analyze social ones. Currently, I am pursuing a masters degree in computer science, after which I plan to
+        continue to integrate both of my passions and use programming to transform and improve the lives of people around the world. </p>
+
+      <h3>
+        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
+      <p>Placeholder</p>
+      <h3>
+        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
+      <p>Placeholder</p>
+
+
+    </section>
+
+
+    <footer>
+      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </footer>
+
+
   </div>
 
-  <div id="Paris" class="tabcontent">
-    <h1>Paris</h1>
-    <p>Paris is the capital of France.</p>
-  </div>
 
-  <div id="Tokyo" class="tabcontent">
-    <h1>Tokyo</h1>
-    <p>Tokyo is the capital of Japan.</p>
-  </div>
+  <script src="javascripts/scale.fix.js"></script>
 
-  <div id="Oslo" class="tabcontent">
-    <h1>Oslo</h1>
-    <p>Oslo is the capital of Norway.</p>
-  </div>
+</body>
 
-  <button class="tablink" onclick="openCity('London', this, 'red')" id="defaultOpen">London</button>
-  <button class="tablink" onclick="openCity('Paris', this, 'green')">Paris</button>
-  <button class="tablink" onclick="openCity('Tokyo', this, 'blue')">Tokyo</button>
-  <button class="tablink" onclick="openCity('Oslo', this, 'orange')">Oslo</button>
-
-
-
-
-
-
-
-
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Welcome</h1>
-        <img src="website-photo.JPG" alt="Personal Photo">
-        <p>Email: pasco.a@northeastern.edu</p>
-        <p class="view"><a href="https://github.ccs.neu.edu/alannapasco">GitHub Enterprise Profile</a></p>
-        <p class="view"><a href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a></p>
-
-      </header>
-      <section>
-        <h3>
-<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
-<p>I like to call myself a lover of languages—both natural and programming. As a child I wrote up my own alphabet and taught it to my friends so we could write secret letters to one another. In high school I spent hours after class with my English teacher to ask about the origins of strange words from our Shakespeare reading. I didn’t care about Shakespeare, though: I was completely fascinated at how his knowledge of ancient Greek and Latin opened doors to different perspectives and interpretations of the same old story.
-
-My fascination with language as a lens through which we enhance our worldview unsurprisingly led me to study linguistics and international affairs during my undergraduate career. I have formally studied Spanish and Arabic and taken part in language immersion programs around the world. My international experience connected me to varied professional positions where I married my love of language learning with humanitarian work.
-
-After transferring to Northeastern University in 2016, I was working part-time at a local bakery when I had an idea to improve the quality of our refrigerated products by tracking shelf life in a structured manner. Waste reduction and increased sales were side effects of my idea as it led the team to place more informed orders from our supplier. When one of my favorite regular customers, a software engineer, once asked what I was working on, I showed him my color-coded data visualization of the display shelf. His reaction surprised me: his eyes lit up, he grabbed a pen and napkin, and started explaining to me how my little chart was a computer program. And just like that, I was inspired to take my first computer science course.
-
-I instantly found a crossover between language learning and programming. Both pursuits engage similar aspects of the intellect: creativity, organization, sequential processing, and appreciating the abstract. Over the years I have gotten Java, Python, Javascript, HTML, CSS, Git/Github under my belt. My specialties include quickly learning new skills and programming languages, systematic problem solving, integrating design patterns and principles, and an intrinsic motivation to learn. I have become obsessed with using software to solve practical problems while I continue to use my linguistic abilities to analyze social ones. Currently, I am pursuing a masters degree in computer science, after which I plan to continue to integrate both of my passions and use programming to transform and improve the lives of people around the world.  </p>
-
-<h3>
-<a id="next-section" class="anchor" href="#next-section" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-<p>Here is where I will write my personal bio and an introduction to my page. It will include my education, skills and expertise, latest job or project im working on, etc. Also include hobbies and fun facts.</p>
-
-<h3>
-<a id="next-section" class="anchor" href="#next-section" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-<p>Placeholder to design something in later.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-
-  </body>
 </html>
