--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <p><img src="website-photo.JPG" alt="Personal Photo"></p>
 
       <div id="tabs">
-        <a class="active" href="#home">Home</a> |
-        <a class="view" href="#contact">About</a> |
-        <a class="view" href="#about">Work</a> |
-        <a class="view" href="#about">Photos</a>
+        <a class="active" href="#home"> Home </a> |
+        <a class="view" href="tabs/about.html"> About </a> |
+        <a class="view" href="tabs/work.html"> Work </a> |
+        <a class="view" href="tabs/photos.html"> Photos </a>
       </div>
 
       <br>
