added about page

--- a/tabs/work.html
+++ b/tabs/work.html
@@ -16,26 +16,16 @@
     <![endif]-->
 </head>
 
+<div id="tabs">
+  <a class="view" href="../index.html"> Home </a> |
+  <a class="view" href="about.html"> Story </a> |
+  <a class="active" href="#work"> Work </a> 
+</div>
+
 <body>
   <div class="wrapper">
     <header>
-      <h1>Welcome</h1>
-      <p><img src="../website-photo.JPG" alt="Personal Photo"></p>
-
-      <div id="tabs">
-        <a class="view" href="../index.html"> Home </a> |
-        <a class="view" href="about.html"> About </a> |
-        <a class="active" href="#work"> Work </a> |
-        <a class="view" href="photos.html"> Photos </a>
-      </div>
-
-      <br>
-      <b>Contact</b><br>
-      pasco.a@northeastern.edu<br>
-      <a href="https://github.ccs.neu.edu/alannapasco">GitHub Enterprise Profile</a><br>
-      <a href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a>
-
-
+      <h1>Header</h1>
     </header>
 
     <section>
