--- a/index.html
+++ b/index.html
@@ -16,56 +16,30 @@
     <![endif]-->
 </head>
 
+<div id="tabs">
+  <a class="active" href="#home"> Home </a> |
+  <a class="view" href="tabs/about.html"> Story </a> |
+  <a class="view" href="tabs/work.html"> Work </a>
+</div>
+
 
 <body>
   <div class="wrapper">
     <header>
       <h1>Welcome</h1>
       <p><img src="website-photo.JPG" alt="Personal Photo"></p>
-
-      <div id="tabs">
-        <a class="active" href="#home"> Home </a> |
-        <a class="view" href="tabs/about.html"> About </a> |
-        <a class="view" href="tabs/work.html"> Work </a> |
-        <a class="view" href="tabs/photos.html"> Photos </a>
-      </div>
-
-      <br>
-      <b>Contact</b><br>
+      <b>Connect</b><br>
+      <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
+      <a target="_blank" href="https://github.com/alannaa">GitHub</a>
       pasco.a@northeastern.edu<br>
-      <a href="https://github.ccs.neu.edu/alannapasco">GitHub Enterprise Profile</a><br>
-      <a href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a>
-
-
     </header>
 
     <section>
       <h3>
         <a id="introduction" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
-
-      <p>I like to call myself a lover of languages—both natural and programming. As a child I wrote up my own alphabet and taught it to my friends so we could write secret letters to one another. In high school I spent hours after class with my
-        English teacher to ask about the origins of strange words from our Shakespeare reading. I didn’t care about Shakespeare, though: I was completely fascinated at how his knowledge of ancient Greek and Latin opened doors to different
-        perspectives and interpretations of the same old story.</p>
-
-      <p>My fascination with language as a lens through which we enhance our worldview unsurprisingly led me to study linguistics and international affairs during my undergraduate career. I have formally studied Spanish and Arabic and taken part in
-        language immersion programs around the world. My international experience connected me to varied professional positions where I married my love of language learning with humanitarian work.</p>
-
-      <p>After transferring to Northeastern University in 2016, I was working part-time at a local bakery when I had an idea to improve the quality of our refrigerated products by tracking shelf life in a structured manner. Waste reduction and
-        increased sales were side effects of my idea as it led the team to place more informed orders from our supplier. When one of my favorite regular customers, a software engineer, once asked what I was working on, I showed him my color-coded
-        data visualization of the display shelf. His reaction surprised me: his eyes lit up, he grabbed a pen and napkin, and started explaining to me how my little chart was a computer program. And just like that, I was inspired to take my first
-        computer science course.</p>
-
-      <p>I instantly found a crossover between language learning and programming. Both pursuits engage similar aspects of the intellect: creativity, organization, sequential processing, and appreciating the abstract. Over the years I have gotten
-        Java, Python, Javascript, HTML, CSS, Git/Github under my belt. My specialties include quickly learning new skills and programming languages, systematic problem solving, integrating design patterns and principles, and an intrinsic motivation
-        to learn. I have become obsessed with using software to solve practical problems while I continue to use my linguistic abilities to analyze social ones. Currently, I am pursuing a masters degree in computer science, after which I plan to
-        continue to integrate both of my passions and use programming to transform and improve the lives of people around the world. </p>
-
+        <p> </p>
       <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-      <p>Placeholder</p>
-      <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-      <p>Placeholder</p>
+
 
 
     </section>
