--- a/tabs/about.html
+++ b/tabs/about.html
@@ -16,38 +16,35 @@
     <![endif]-->
 </head>
 
+<div id="tabs">
+  <a class="view" href="../index.html"> Home </a> |
+  <a class="active" href="#about"> Story </a> |
+  <a class="view" href="work.html"> Work </a>
+</div>
+
+
 <body>
   <div class="wrapper">
     <header>
       <h1>Welcome</h1>
       <p><img src="../website-photo.JPG" alt="Personal Photo"></p>
-
-      <div id="tabs">
-        <a class="view" href="../index.html"> Home </a> |
-        <a class="active" href="#about"> About </a> |
-        <a class="view" href="work.html"> Work </a> |
-        <a class="view" href="photos.html"> Photos </a>
-      </div>
-
-      <br>
-      <b>Contact</b><br>
+      <b>Connect</b><br>
+      <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
+      <a target="_blank" href="https://github.com/alannaa">GitHub</a>
       pasco.a@northeastern.edu<br>
-      <a href="https://github.ccs.neu.edu/alannapasco">GitHub Enterprise Profile</a><br>
-      <a href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a>
-
-
     </header>
 
     <section>
       <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-        <p>Placeholder</p>
-      <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-      <p>Placeholder</p>
-      <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-      <p>Placeholder</p>
+        <a id="about" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Story</h3>
+        <p>This page is a work in progress. Here are some fun facts about me in the meantime:
+          <ul>
+            <li>Brewing good coffee is a hobby of mine.</li>
+            <li>I can recite the first 100 digits of pi from memory.</li>
+            <li>I enjoy taking photos for funzies but always forget to post them on social media.</li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=FSNoWYccUsg">Here's a video of me</a> attempting to perform Bohemian Rhapsody on the piano at my high school talent show. Please feel free to sing along.</li>
+          </ul>
+        </p>
 
 
     </section>
