wrote a lil bio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="wrapper">
     <header>
       <h1>Welcome</h1>
-      <p><img src="website-photo.JPG" alt="Personal Photo"></p>
+      <p><img src="resources/website-photo.JPG" alt="Personal Photo"></p>
       <b>Connect</b><br>
       <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
       <a target="_blank" href="https://github.com/alannaa">GitHub</a>
@@ -37,24 +37,19 @@
     <section>
       <h3>
         <a id="introduction" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
-        <p> </p>
-      <h3>
+        <p> Hi there. My name is Alanna, and some call me Lana.</p>
 
+        <p> I’m a <b>master’s student of computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. That means I spend 90% of my day reading and writing code and the other 90% debugging. I’m <b>currently seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b>
 
+        <p><a target="_blank" href="resources/Alanna_Pasco_Resume.PDF">View my resume</a></p>
 
-    </section>
+      </section>
 
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
 
-    <footer>
-      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-    </footer>
-
-
-  </div>
-
-
-  <script src="javascripts/scale.fix.js"></script>
-
-</body>
-
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
 </html>
