implemented formatting for work page

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Alanna Pasco</title>
 
-  <link rel="stylesheet" href="../stylesheets/style.css">
+  <link rel="stylesheet" href="../stylesheets/index.css">
   <link rel="stylesheet" href="stylesheets/github-light.css">
   <meta name="viewport" content="width=device-width">
   <!--[if lt IE 9]>
@@ -27,21 +27,21 @@
   <div class="wrapper">
     <header>
       <h1>Welcome</h1>
-      <p><img src="../website-photo.JPG" alt="Personal Photo"></p>
+      <p><img id="profile-photo" src="../resources/website-photo.JPG" alt="Personal Photo"></p>
       <b>Connect</b><br>
       <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
       <a target="_blank" href="https://github.com/alannaa">GitHub</a>
-      pasco.a@northeastern.edu<br>
+      pasco.a@northeastern.edu<br><br>
     </header>
 
     <section>
       <h3>
         <a id="about" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Story</h3>
         <p>This page is a work in progress. Here are some fun facts about me in the meantime:
-          <ul>
+          <ul id="hobbies">
             <li>Brewing good coffee is a hobby of mine.</li>
             <li>I can recite the first 100 digits of pi from memory.</li>
-            <li>I enjoy taking photos for funzies but always forget to post them on social media.</li>
+            <li>I really taking photos for fun but always forget to post them on social media.</li>
             <li><a target="_blank" href="https://www.youtube.com/watch?v=FSNoWYccUsg">Here's a video of me</a> attempting to perform Bohemian Rhapsody on the piano at my high school talent show. Please feel free to sing along.</li>
           </ul>
         </p>
