--- a/tabs/work.html
+++ b/tabs/work.html
@@ -1,4 +1,4 @@
-<!-- About Page -->
+<!-- Work Experience Page -->
 
 <!doctype html>
 <html>
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Alanna Pasco</title>
 
-  <link rel="stylesheet" href="../stylesheets/style.css">
+  <link rel="stylesheet" href="../stylesheets/work.css">
   <link rel="stylesheet" href="stylesheets/github-light.css">
   <meta name="viewport" content="width=device-width">
   <!--[if lt IE 9]>
@@ -19,40 +19,68 @@
 <div id="tabs">
   <a class="view" href="../index.html"> Home </a> |
   <a class="view" href="about.html"> Story </a> |
-  <a class="active" href="#work"> Work </a> 
+  <a class="active" href="#work"> Work </a>
 </div>
 
 <body>
   <div class="wrapper">
-    <header>
-      <h1>Header</h1>
-    </header>
 
     <section>
-      <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-        <p>Placeholder</p>
-      <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-      <p>Placeholder</p>
-      <h3>
-        <a id="next-section" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next Section</h3>
-      <p>Placeholder</p>
 
-
+      <p>
+        <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hey! That's my Fish</h2>
+        <img alt="Code Demo" class="demo-left" src="">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <br>
+        Takeaways
+        <ul>
+          <li>item</li>
+          <li>item</li>
+        </ul>
+      </p>
     </section>
 
+    <br>
+    <br>
+    <br>
+
+    <section>
+      <p>
+        <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Light 'Em All</h2>
+        <img alt="Code Demo" class="demo-right" src="">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <br>
+        Takeaways
+        <ul>
+          <li>item</li>
+          <li>item</li>
+        </ul>
+      </p>
+    </section>
+
+    <br>
+    <br>
+    <br>
+
+    <section>
+      <p>
+        <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Minesweeper</h2>
+        <img alt="Code Demo" class="demo-left" src="">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <br>
+        Takeaways
+        <ul>
+          <li>item</li>
+          <li>item</li>
+        </ul>
+      </p>
+    </section>
 
     <footer>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
     </footer>
 
-
   </div>
-
-
   <script src="javascripts/scale.fix.js"></script>
-
 </body>
-
 </html>
