--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Alanna Pasco</title>
 
-  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
   <link rel="stylesheet" href="stylesheets/github-light.css">
   <meta name="viewport" content="width=device-width">
   <!--[if lt IE 9]>
@@ -24,25 +24,21 @@
 
 
 <body>
-  <div class="wrapper">
+  <div id="main" class="wrapper">
     <header>
       <h1>Welcome</h1>
-      <p><img src="resources/website-photo.JPG" alt="Personal Photo"></p>
+      <p><img id="profile-photo" src="resources/website-photo.JPG" alt="Personal Photo"></p>
       <b>Connect</b><br>
       <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
       <a target="_blank" href="https://github.com/alannaa">GitHub</a>
-      pasco.a@northeastern.edu<br>
+      pasco.a@northeastern.edu<br><br>
     </header>
 
-    <section>
-      <h3>
-        <a id="introduction" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
+    <section id="introduction-section">
+      <h3><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
         <p> Hi there. My name is Alanna, and some call me Lana.</p>
-
-        <p> I’m a <b>master’s student of computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. That means I spend 90% of my day reading and writing code and the other 90% debugging. I’m <b>currently seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b>
-
+        <p> I’m a <b>master’s student of computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. That means I spend 90% of my day reading and writing code and somehow an additional 90% debugging. I’m <b>currently seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b>
         <p><a target="_blank" href="resources/Alanna_Pasco_Resume.PDF">View my resume</a></p>
-
       </section>
 
       <footer>
