added images to work page

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -41,7 +41,7 @@
           <ul id="hobbies">
             <li>Brewing good coffee is a hobby of mine.</li>
             <li>I can recite the first 100 digits of pi from memory.</li>
-            <li>I really taking photos for fun but always forget to post them on social media.</li>
+            <li>I enjoy taking photos but always forget to post them on social media.</li>
             <li><a target="_blank" href="https://www.youtube.com/watch?v=FSNoWYccUsg">Here's a video of me</a> attempting to perform Bohemian Rhapsody on the piano at my high school talent show. Please feel free to sing along.</li>
           </ul>
         </p>
