adding items to work page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </header>
 
     <section id="introduction-section">
-      <h3><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
-        <p> Hi there. My name is Alanna, and some call me Lana.</p>
+
+        <p> Hi there. My name is Alanna, but most call me Lana.</p>
         <p> I’m a <b>master’s student of computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. That means I spend 90% of my day reading and writing code and somehow an additional 90% debugging. I’m <b>currently seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b>
         <p><a target="_blank" href="resources/Alanna_Pasco_Resume.PDF">View my resume</a></p>
       </section>
