--- a/tabs/work.html
+++ b/tabs/work.html
@@ -88,7 +88,7 @@
             <li>Determined the <b>minimum spanning tree</b> of the game's underlying graph using <b>Kruskal’s algorithm</b> to generate the continuous wire grid before randomly rotating tiles for gameplay</li>
             <li>Calculated <b>radius of power</b> by finding the furthest distance between any two nodes and cutting that in half</li>
             <li>Used <b>breadth first search</b> to traverse tiles stemming from power station and light only the tiles within the radius of power. Implemented gradient color to make closer nodes brighter than further nodes.</li>
-            <li>Implemented the option to generate a graph with a <b>bias</b> toward more horizontal or vertical wires by increasing the weight of horizontal or vertical edges respectively</li>
+            <li>Implemented the option to generate a <b>biased graph</b> toward more horizontal or vertical wires by increasing the weight of horizontal or vertical edges respectively</li>
             <li>Implemented <b>hexagonal version</b> of the game where tiles are 6-sided </li>
           </ul>
         </p>
