edited some wording

--- a/tabs/work.html
+++ b/tabs/work.html
@@ -25,7 +25,7 @@
 <body>
   <div class="wrapper">
 
-    <h4 id="reposMsg">GH repos of the following projects and more are available upon request</h4>
+    <h4 id="reposMsg">GitHub repositories of the following projects and more are available upon request</h4>
 
     <section>
         <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fish Game Server</h2>
@@ -34,10 +34,10 @@
           CS 4500 Software Development - Fall 2020<br>
           Roughly 7,375 lines of Java<br><br>
           <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides servers to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components. Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling. That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I didn't meet the requirements to.
-          Many undergraduates consider this course the most challenging of their career and I simply did not wish to miss out on the incredible learning experience this course presented. According to Professor Felleisen, I earned an A for the equivalent MS course.<br><br>
+          Many undergraduates consider this course the most challenging of their career and I simply did not wish to miss out on the incredible learning experience this course presented. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
           <b>Project highlights:</b>
           <ul>
-            <li>Pair programming collaboration with Brock Fenbert</li>
+            <li>Semester-long <b>pair programming</b> collaboration with Brock Fenbert</li>
             <li>Wrote detailed <b>design documents</b>, defended design choices</li>
             <li>Performed <b>two code walks</b> for class feedback and implemented feedback</li>
             <li><b>Integration tests</b> for each milestone; unit tests for each file</li>
@@ -57,8 +57,8 @@
           DS 2000 - Spring 2018<br>
           Python and Statistics<br><br>
           <b>Project Description:</b> Build a tool that predicts which language a document is written in given a sample set of documents whose languages are known.
-          This was my first project writing in Python and I thoroughly enjoyed working on a project that married my love of languages with my love of coding.
-          In hindsight, the program takes quite a long time to run (~40 seconds) with only the small batch of input files given and thus could be implemented more efficiently with the few extra years of experience I now have.<br><br>
+          This was my first Python project and I thoroughly enjoyed working on something that married my love of languages with my love of coding.
+          In hindsight, the program takes quite long to run (~40 seconds) with only the small batch of input files given and thus could be refactored with the few extra years of experience I now have.<br><br>
           <b>Method:</b>
           <ol>
             <li>Create two dictionaries: one for files we <i>do</i> know the language of, and one for unknown files</li>
@@ -87,7 +87,7 @@
           <ul>
             <li>Determined the <b>minimum spanning tree</b> of the game's underlying graph using <b>Kruskal’s algorithm</b> to generate the continuous wire grid before randomly rotating tiles for gameplay</li>
             <li>Calculated <b>radius of power</b> by finding the furthest distance between any two nodes and cutting that in half</li>
-            <li>Used <b>breadth first search</b> to traverse tiles stemming from power station and light only the tiles within the radius of power. Implemented gradient color to make closer nodes brighter than further nodes.</li>
+            <li>Used <b>breadth first search</b> to traverse tiles stemming from power station and light only the tiles within the radius of power; Implemented gradient color to make closer nodes brighter than further nodes</li>
             <li>Implemented the option to generate a <b>biased graph</b> toward more horizontal or vertical wires by increasing the weight of horizontal or vertical edges respectively</li>
             <li>Implemented <b>hexagonal version</b> of the game where tiles are 6-sided </li>
           </ul>
