--- a/tabs/work.html
+++ b/tabs/work.html
@@ -57,7 +57,7 @@
           DS 2000 - Spring 2018<br>
           Python and Statistics<br><br>
           <b>Project Description:</b> Build a tool that predicts which language a document is written in given a sample set of documents whose languages are known.
-          This was my first Python project and I thoroughly enjoyed working on something that married my love of languages with my love of coding.
+          This was my first Python project and I thoroughly enjoyed working on something that married my love of languages with my love of coding.<br>
           <b>Method:</b>
           <ol>
             <li>Create two dictionaries: one for files we <i>do</i> know the language of, and one for unknown files</li>
